--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -19,7 +19,7 @@
         <a href="{{ url_for('posts.new_post') }}" class="{{ 'active' if request.endpoint == 'posts.new_post' }}">新增貼文</a>
         <a href="{{ url_for('main.rate') }}" class="{{ 'active' if request.endpoint == 'main.rate' }}">評價</a>
         <a href="{{ url_for('account.account') }}" class="nav-account {{ 'active' if request.endpoint == 'account.account' }}">
-            <img class="nav-profile-pic" src="{{ url_for('static', filename='profile_pics/' + current_user.image_file) }}" alt="Profile Picture">
+            <img class="nav-profile-pic" src="{{ url_for('static', filename='profile_pics/' + (current_user.image_file or 'default.jpg')) }}" alt="Profile Picture">
             帳戶管理
         </a>
         <a href="{{ url_for('auth.logout') }}" class="nav-logout">登出（{{ current_user.username }}）</a>
